Fix EOF marker wrapping underneath when horizontal scroll bar is present.

--- a/www/css/file-browser.css
+++ b/www/css/file-browser.css
@@ -17,7 +17,7 @@
 .file-content .file-line-numbers {
 	float: left;
 	color: #888;
-	margin-bottom: 2em;
+	margin-bottom: 4em;
 }
 
 .file-content .file-line-numbers div {
